--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         }
         .link-button {
-            width: 500px;
+            width: 300px;
             background-color: #fff;
             border: 1px solid #ddd;
             border-radius: 7px;
@@ -106,7 +106,7 @@
 
         <div class="link-button" onclick="openHiddenLink('quotex-course-link')"><img class= "frontimage" src="quoteximage.png" alt="quotex image" width="50" height="50">Quotex Free Course</div>
 
-        <div class="link-button" onclick="openHiddenLink('bingx-link')"><img class= "frontimage" src="bingximage.webp" alt="bingx image" width="50" height="50">BingX Registration Link</div>
+        <div class="link-button" onclick="openHiddenLink('bingx-link')"><img class= "frontimage" src="bingXimage.webp" alt="bingx image" width="50" height="50">BingX Registration Link</div>
 
         <div class="link-button" onclick="openHiddenLink('binance-link')"><img class= "frontimage" src="binanceimage.png" alt="binance image" width="50" height="50">Binance Registration Link</div>
 
