--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Earn With Rashid Page</title>
+    <title>Landing Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('bgimage2.jpg');
+            background-image: url('profileblur.jpg');
+            background-size: cover;
             text-align: center;
             padding: 20px;
         }
@@ -42,7 +43,7 @@
             width: 575px;                 /* Decrease width of the div */
             background-color: #fff;
             border: 1px solid #ddd;
-            border-radius: 5px;
+            border-radius: 10px;
             padding: 8px;                 /* Decrease padding */
             margin: 10px;
             font-size: 16px;              /* Decrease font size */
