--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
         @media screen and (max-width: 768px) {
         body {
             font-family: Arial, sans-serif;
-            background-image: url('bgimage2.jpg');
+            background-image: url('profileblur.jpg');
+            background-size: cover;
+            background-position: center;
             text-align: center;
             padding: 20px;
         }
