--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             font-family: Arial, sans-serif;
             background-image: url('profileblur.jpg');
             background-size: cover;
+            background-position: center;
             text-align: center;
             padding: 20px;
         }
@@ -18,11 +19,13 @@
             border-radius: 50%;
         }
         .header {
+            color: white;
             font-size: 1.5em;
             margin-top: 10px;
         }
 
         .header2{
+            color: white;
             font-size: 20px;
             font-weight: 500;
         }
@@ -90,7 +93,9 @@
             justify-content: center; /* Center text horizontally within the wrapper */
         }
 
-
+        .footer{
+            color: white;
+        }
 
         @media screen and (max-width: 768px) {
         body {
@@ -178,6 +183,10 @@
             display: flex;
             justify-content: center; /* Center text horizontally within the wrapper */
         }
+        .footer{
+            color: white;
+        }
+
 
        
     </style>
@@ -224,15 +233,15 @@
     </div>
 
     <div class="icons">
-        <a href="https://facebook.com/@EarnwithRashidofficial" target="_blank"><img src="fbdown.webp" alt="Icon"></a>
-        <a href="https://www.instagram.com" target="_blank"><img src="instadown.webp" alt="Icon"></a>
-        <a href="https://whatsapp.com/channel/0029Va82SRN7j6g15nRATy3d" target="_blank"><img src="wtdown.webp" alt="Icon"></a>
-        <a href="https://youtu.be/EcSyfVDvARE" target="_blank"><img src="ytdown.webp" alt="Icon"></a>
-        <a href="https://www.tiktok.com/@earnwithrashid?_t=8kvwxghm8h4&_r=1" target="_blank"><img src="tiktokdown.webp" alt="Icon"></a>
+        <a href="https://facebook.com/@EarnwithRashidofficial" target="_blank"><img src="fbdownwhite.png" alt="Icon"></a>
+        <a href="https://www.instagram.com" target="_blank"><img src="instadownwhite.png" alt="Icon"></a>
+        <a href="https://whatsapp.com/channel/0029Va82SRN7j6g15nRATy3d" target="_blank"><img src="wtdownwhite.png" alt="Icon"></a>
+        <a href="https://youtu.be/EcSyfVDvARE" target="_blank"><img src="ytdownwhite.png" alt="Icon"></a>
+        <a href="https://www.tiktok.com/@earnwithrashid?_t=8kvwxghm8h4&_r=1" target="_blank"><img src="tiktokdownwhite.png" alt="Icon"></a>
     </div>
 <br>
 
-    <p class="header2"><b>Thanks for Visiting!!</b></p>
+    <p class="footer"><b>Thanks for Visiting Us!!</b></p>
 
 
 
